--- a/NetworkTesting/NetworkTesting.csproj
+++ b/NetworkTesting/NetworkTesting.csproj
@@ -52,7 +52,9 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainFormControl.cs" />
+    <Compile Include="BasicConnectionControl.cs" />
+    <Compile Include="NetworkUtils.cs" />
+    <Compile Include="OutputControl.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainForm.resx">
